; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_smsc.c_smsc_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/net/extr_if_smsc.c_smsc_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smsc_softc = type { i32, i32, %struct.usb_ether }
%struct.usb_ether = type { i32 }

@SMSC_N_TRANSFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @smsc_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smsc_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.smsc_softc*, align 8
  %4 = alloca %struct.usb_ether*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.smsc_softc* @device_get_softc(i32 %5)
  store %struct.smsc_softc* %6, %struct.smsc_softc** %3, align 8
  %7 = load %struct.smsc_softc*, %struct.smsc_softc** %3, align 8
  %8 = getelementptr inbounds %struct.smsc_softc, %struct.smsc_softc* %7, i32 0, i32 2
  store %struct.usb_ether* %8, %struct.usb_ether** %4, align 8
  %9 = load %struct.smsc_softc*, %struct.smsc_softc** %3, align 8
  %10 = getelementptr inbounds %struct.smsc_softc, %struct.smsc_softc* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @SMSC_N_TRANSFER, align 4
  %13 = call i32 @usbd_transfer_unsetup(i32 %11, i32 %12)
  %14 = load %struct.usb_ether*, %struct.usb_ether** %4, align 8
  %15 = call i32 @uether_ifdetach(%struct.usb_ether* %14)
  %16 = load %struct.smsc_softc*, %struct.smsc_softc** %3, align 8
  %17 = getelementptr inbounds %struct.smsc_softc, %struct.smsc_softc* %16, i32 0, i32 0
  %18 = call i32 @mtx_destroy(i32* %17)
  ret i32 0
}

declare dso_local %struct.smsc_softc* @device_get_softc(i32) #1

declare dso_local i32 @usbd_transfer_unsetup(i32, i32) #1

declare dso_local i32 @uether_ifdetach(%struct.usb_ether*) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
